logs/abathur.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/abathur'...
Compiling './lib/python3.5/site-packages/abathur/abathur.py'...
***   File "./lib/python3.5/site-packages/abathur/abathur.py", line 28
    project_name_value = input(f"please input value of placeholder `PROJECT_NAME` (default `{project_name})`:").strip()
                                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abathur/alias.py'...
***   File "./lib/python3.5/site-packages/abathur/alias.py", line 24
    return f"not found alias name: {self.alias}"
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abathur/builder.py'...
***   File "./lib/python3.5/site-packages/abathur/builder.py", line 26
    print(f"copy: from {source} to {dest}")
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/abathur/commands'...
Compiling './lib/python3.5/site-packages/abathur/commands/__init__.py'...
***   File "./lib/python3.5/site-packages/abathur/commands/__init__.py", line 35
    sys.stderr.write(f"error: {message}\n")
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abathur/commands/base_command.py'...
***   File "./lib/python3.5/site-packages/abathur/commands/base_command.py", line 18
    raise NotImplementedError(f"sub-command {self.name} function not implemention")
                                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abathur/commands/list_command.py'...
***   File "./lib/python3.5/site-packages/abathur/commands/list_command.py", line 17
    print(f"{name}:  {uri}")
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/abathur-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/mono_require-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/monorequire'...
Compiling './lib/python3.5/site-packages/monorequire/filelock.py'...
***   File "./lib/python3.5/site-packages/monorequire/filelock.py", line 16
    return f"try open lock file {self.resource} timeout. time: {self.timeout}"
                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
